[gd_scene load_steps=13 format=2]

[ext_resource path="res://Scenes/UI/HUD.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/Player/Helmet/TubeLight.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Player/Helmet/Helmet.gd" type="Script" id=3]
[ext_resource path="res://Scenes/UI/OxygenMeter.tscn" type="PackedScene" id=4]
[ext_resource path="res://Assets/Originals/SFX/Warning_-_GWJM.ogg" type="AudioStream" id=5]
[ext_resource path="res://Theme/digital-7_25_green_outline.tres" type="DynamicFont" id=6]
[ext_resource path="res://Theme/digital-7_16.tres" type="DynamicFont" id=7]

[sub_resource type="SpatialMaterial" id=5]
flags_transparent = true
albedo_color = Color( 1, 1, 1, 0.498039 )
emission_enabled = true
emission = Color( 0.337255, 1, 0, 1 )
emission_energy = 1.0
emission_operator = 0
emission_on_uv2 = false

[sub_resource type="SpatialMaterial" id=6]
flags_transparent = true
albedo_color = Color( 1, 1, 1, 0.498039 )

[sub_resource type="PlaneMesh" id=1]
size = Vector2( 0.49, 0.288 )

[sub_resource type="ViewportTexture" id=4]
viewport_path = NodePath("Viewport")

[sub_resource type="SpatialMaterial" id=3]
resource_local_to_scene = true
flags_transparent = true
flags_unshaded = true
flags_albedo_tex_force_srgb = true
albedo_texture = SubResource( 4 )

[node name="Helmet" type="Spatial"]
script = ExtResource( 3 )

[node name="CSGSphere" type="CSGSphere" parent="."]
radius = 0.5
radial_segments = 24
rings = 12

[node name="CSGSphere2" type="CSGSphere" parent="CSGSphere"]
operation = 2
radius = 0.35
radial_segments = 24
rings = 12

[node name="CSGBox" type="CSGBox" parent="CSGSphere"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.333 )
operation = 2
width = 0.66
height = 0.6
depth = 0.6

[node name="CSGBox2" type="CSGBox" parent="CSGSphere"]
transform = Transform( 1, 0, 0, 0, 0.5, 0.866025, 0, -0.866025, 0.5, 0, 0.283459, -0.227422 )
operation = 2
width = 0.2
height = 0.15
depth = 0.1

[node name="LeftLabel3D" type="Label3D" parent="."]
transform = Transform( -8.74228e-09, -1.77636e-15, 0.2, 0, 0.2, 1.77636e-15, -0.2, 7.76472e-23, -8.74228e-09, -0.329, -0.08, -0.27 )
modulate = Color( 0.0313726, 1, 0, 1 )
text = "left
foot"
font = ExtResource( 6 )

[node name="RightLabel3D" type="Label3D" parent="."]
transform = Transform( -8.74228e-09, 0, -0.2, 0, 0.2, 0, 0.2, 0, -8.74228e-09, 0.329, -0.08, -0.27 )
modulate = Color( 0.0313726, 1, 0, 1 )
text = "right
foot"
font = ExtResource( 6 )

[node name="RunLight" type="OmniLight" parent="."]
transform = Transform( 1, 5.0243e-15, -1.69194e-22, -4.35117e-15, 0.866025, -0.5, -2.51215e-15, 0.5, 0.866025, 0, 0.29949, -0.249281 )
light_color = Color( 0.337255, 1, 0, 1 )
light_energy = 0.3
omni_range = 0.1
omni_attenuation = 3.0

[node name="RunCounter" type="Label3D" parent="."]
transform = Transform( 1, 7.10543e-15, -1.77636e-15, -4.35117e-15, 0.866025, -0.5, -2.51215e-15, 0.5, 0.866025, -0.0598893, 0.327604, -0.286889 )
pixel_size = 0.0025
modulate = Color( 0.337255, 1, 0, 1 )
text = "00:00.0"
font = ExtResource( 7 )
horizontal_alignment = 0

[node name="OxygenMeter" parent="." instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.295, 0.057889 )

[node name="LeftLight" parent="." instance=ExtResource( 2 )]
transform = Transform( -3.27836e-08, -3.27835e-08, -0.75, -0.75, -3.27835e-08, 3.27836e-08, -3.27835e-08, 0.75, -3.27835e-08, -0.329, 0, -0.3 )
on_material = SubResource( 5 )
off_color = Color( 0, 0, 0, 1 )
off_material = SubResource( 6 )

[node name="RightLight" parent="." instance=ExtResource( 2 )]
transform = Transform( 1.43302e-15, 3.27835e-08, 0.75, 0.75, -3.27835e-08, -2.69992e-21, 3.27835e-08, 0.75, -3.27835e-08, 0.329, 0, -0.3 )
on_material = SubResource( 5 )
off_color = Color( 0, 0, 0, 1 )
off_material = SubResource( 6 )

[node name="CameraPivot" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.1 )

[node name="Camera" type="Camera" parent="CameraPivot"]

[node name="Viewport" type="Viewport" parent="."]
size = Vector2( 1024, 600 )
transparent_bg = true
render_target_v_flip = true

[node name="HUD" parent="Viewport" instance=ExtResource( 1 )]

[node name="HUDMesh" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, -0.354719 )
mesh = SubResource( 1 )
material/0 = SubResource( 3 )

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="WarningPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -20.0
bus = "SFX"

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
